# mvp_hardware_drivers

./: .gitmodules  README.MD  attiny_code.ino
alpha_driver/src/alpha_driver/config/: driver_uart.yaml
alpha_driver/src/alpha_driver/launch/: driver.launch
alpha_driver/src/alpha_driver/src/alpha_driver/: AlphaDriver.cpp  AlphaDriver.h
alpha_driver/src/alpha_driver_uart/: CMakeLists.txt
alpha_driver/src/alpha_driver_uart/config/: config.yaml
alpha_driver/src/alpha_driver_uart/include/alpha_driver_uart/: pico_driver.cpp  pico_ros.cpp  thruster_manager.cpp  thruster_manager.h  utility.h
alpha_driver/src/alpha_driver_uart/launch/: test_thruster.launch
alpha_driver/src/alpha_driver_uart/src/: node.cpp
alpha_driver/src/alpha_mcu_uart/scripts/: upload.sh
alpha_driver/src/alpha_mcu_uart/src/: main.cpp
alpha_driver/src/alpha_mcu_uart/src/alpha/: manager.h  parameters.h  pwm_controller.cpp
alpha_gpio_manager/: CMakeLists.txt  package.xml
alpha_gpio_manager/src/: gpio_manager.hpp
mvp_driver/: CMakeLists.txt  package.xml
mvp_driver/config/: config.yaml  pwm.yaml
mvp_driver/include/mvp_driver/: I2CPeripheral.cpp  PCA9685.cpp  PCA9685.h  pwm_driver.cpp  pwm_driver.hpp
mvp_driver/launch/: pwm_driver.launch.py
mvp_driver/src/: pwm_driver_node.cpp
mvp_drivers/: CMakeLists.txt  package.xml
mvp_drivers/config/: pwm.yaml
mvp_drivers/include/mvp_drivers/: pwm_driver.hpp
mvp_drivers/launch/: pwm_driver.launch.py
mvp_drivers/src/: pwm_driver.cpp  pwm_driver_node.cpp
mvp_gpio_manager/: CMakeLists.txt  package.xml
mvp_gpio_manager/config/: gpio_manager.yaml
mvp_gpio_manager/launch/: gpio_manager.launch  gpio_manager.launch.py
mvp_gpio_manager/src/: gpio_manager.cpp  gpio_manager.hpp
mvp_utility/: CMakeLists.txt  package.xml
mvp_utility/config/: control.yaml  imu_ned_enu.yaml
mvp_utility/include/mvp_utility/: imu_ned_enu.hpp  pressure_to_depth.hpp  pressure_to_depth_node.hpp
mvp_utility/launch/: simple_launch.launch  simple_launch.xml
mvp_utility/params/: imu_ned_enu.yaml
mvp_utility/src/: imu_ned_enu.cpp  imu_ned_enu_node.cpp  imu_ned_enu_node_main.cpp  pressure_to_depth.cpp  pressure_to_depth_node.cpp  pressure_to_depth_node_main.cpp  yaml_test_node.cpp
pwm_driver/: CMakeLists.txt  package.xml
pwm_driver/config/: config.yaml  pwm_driver.yaml
pwm_driver/include/: Constants.h  I2CPeripheral.cpp  PCA9685.cpp  PCA9685.h  pwm_driver.cpp  pwm_driver.hpp
pwm_driver/include/pwm_driver/: Constants.h  I2CPeripheral.cpp  I2CPeripheral.h  PCA9685.cpp  PCA9685.h  pwm_driver.cpp  pwm_driver.hpp
pwm_driver/launch/: example.launch.py  pwm_driver.launch  pwm_driver.launch.py
pwm_driver/src/: PCA9685.cpp  pwm_driver.cpp  pwm_driver_node.cpp
pwm_pico_driver/src/alpha_common/include/alpha/common/: dictionary.h
pwm_pico_driver/src/alpha_driver_uart/: package.xml
pwm_pico_driver/src/alpha_driver_uart/include/alpha_driver_uart/: default.h  parameters.h  pico_driver.h  pico_ros.h
pwm_pico_driver/src/alpha_driver_uart/launch/: driver.launch  test_serial.launch
pwm_pico_driver/src/alpha_driver_uart/test/: test_serial.cpp  test_thruster.cpp
pwm_pico_driver/src/alpha_mcu_uart/: CMakeLists.txt
pwm_pico_driver/src/alpha_mcu_uart/src/alpha/: common.h  manager.cpp  pwm_controller.h
