<?xml version="1.0"?>
<package format="3">
  <name>pwm_driver</name>
  <version>0.0.0</version>
  <description>pwm_driver description</description>
  <maintainer email="mingxi@todo.todo">mingxi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
