<?xml version="1.0"?>
<package format="2">
  <name>alpha_driver_uart</name>
  <version>0.0.0</version>
  <description>The alpha_driver_uart package</description>

  <maintainer email="linzhao@uri.edu">Lin Zhao</maintainer>
  <author email="emircem@uri.edu">Emir Cem Gezer</author>
  <author email="mzhou@uri.edu">Mingxi Zhou</author>
  <author email="linzhao@uri.edu">Lin Zhao</author>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>mvp_msgs</depend>
  <depend>serial</depend>
  <depend>sensor_msgs</depend>

</package>
